featix(api): pagination pages added / remade search products / fixed get products category_id param search
